--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # TYPEORM CONFIGS
 TYPEORM_HOST=localhost
 TYPEORM_READ_HOST=localhost
-TYPEORM_PORT=3307
+TYPEORM_PORT=3306
 TYPEORM_USERNAME=root
-TYPEORM_PASSWORD=password
+TYPEORM_PASSWORD=Musa5682!
 TYPEORM_DATABASE=player
+
