--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json --watchAll --detectOpenHandles",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migration:run": "typeorm=true npm run typeorm migration:run -- -d ./src/typeorm.ts",
     "migration:generate": "npm run typeorm -- -d ./src/typeorm.ts migration:generate ./migrations/$npm_config_name",
@@ -30,7 +30,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
-    "mysql2": "^3.6.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
